# pariraksakah

./: .env.example  .gitignore  CYBERSECURITY_STRUCTURE_AND_STATUS.md  DEMO_GUIDE.md  HACKATHON_RUNBOOK.md  JUDGE_SAFE_ATTACK_DEMO.md  README.md  docker-compose.yml  pyrightconfig.json  requirements-test.txt
.github/workflows/: main.yml  verify.yml
datasets/schemas/: event_schema.avsc
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
infrastructure/: prometheus.yml  quantum-kafka-init.sh  quantum-neo4j-schema.cypher  quantum-timescaledb-schema.sql
infrastructure/kubernetes/: access-control.yaml  api-gateway.yaml  ingress.yaml  kafka-statefulset.yaml  namespace.yaml  neo4j-statefulset.yaml  network-policies.yaml  rbac.yaml  threat-detection.yaml  (+1 more)
quantum/: README.md
quantum/quantum-random-number/: Cargo.toml  Dockerfile
quantum/quantum-random-number/src/: main.rs  nist_tests.rs
quantum/quantum-safe-crypto/: Cargo.toml  Dockerfile
quantum/quantum-safe-crypto/src/: main.rs  pqc_algorithms.rs
scripts/: Invoke-JudgeSafeDemo.ps1  bootstrap_dev.py  demo_simulator.py  generate_d1_network.py  generate_d2_ueba.py  generate_d3_phishing.py  generate_d4_bioauth.py  generate_d5_campaigns.py
services/security-dna/identity-engine/: Cargo.toml  Dockerfile
services/security-dna/identity-engine/src/: hardware_fingerprint_collector.rs  main.rs
tests/: conftest.py  test_antiphishing_extensions.py  test_integration.py  test_p03_ingestion.py
(+180 files in other folders)
